# McDonalds-Review-NLP-Pipeline

./: README.md  app.py  charts.py  classification.py  clean.py  main.py  pyproject.toml  requirements.txt  sentiment.py
