[project]
name = "reviews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
